2007-03-21  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Allow multiple enum values to be passed into the same argument, packing
	then in an array.

2007-03-18  Laurent Sansonetti  <lsansonetti@apple.com>

	* tests/tc_itunes.rb,
	  tests/tc_textedit.rb,
	  src/lib/rbosa.rb:
	- Fixed 'msng' type conversions ;
	- Added the possibility to retrieve a list of attributes of a descriptor
	  list ;
	- Added Ruby <-> OSA conversions for color type ;
	- Added test cases. 

2007-03-08  Laurent Sansonetti  <lsansonetti@apple.com>

	* bin/rdoc-osa:
	Fixed the rdoc-osa tool for applications that do not have a 'name' command.

2007-03-02  Laurent Sansonetti  <lsansonetti@apple.com>

	* rubyosa.gemspec:
	Forgot to include 'data/rubyosa/...', released a 0.3.0.1 version of the gem.

=== RubyOSA 0.3.0 ===

2007-03-02  Laurent Sansonetti  <lsansonetti@apple.com>

	* rubyosa.gemspec,
	  NEWS,
	  README:
	Final sync for 0.3.0.

	* src/lib/rbosa.rb:
	Convert the 'doub' OSA type as double.

2007-03-01  Laurent Sansonetti  <lsansonetti@apple.com>

	* NEWS,
	  rubyosa.gemspec:
	Prepared for 0.3.0.

	* extconf.rb,
	  post-install.rb,
	  README:
	Do not try to hack the install task of the generated mkmf Makefile anymore, 
	as it doesn't seem to work with some previous mkmf revisions. Instead just add
	a new Makefile task, 'install-extras', and suggest the user to call it in the 
	README.

2007-02-28  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  src/rbosa.c:
	Added a new global setting to control either a return value should be 
	expected or not from the following Apple events. Variable is OSA.wait_reply, 
	default value is nil which means "automatic behavior".

	* src/lib/rbosa.rb:
	- Send a ascr/gdut event after having merged a scriptable addition sdef ;
	- Do not set the same constant twice.

2007-02-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* AUTHORS:
	Added Wes and Terry.

	* sample/Mail/get_selected_mail.rb: