@@ -1,8 +1,10 @@
 2007-03-21  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* src/lib/rbosa.rb:
-	Allow multiple enum values to be passed into the same argument, packing
-	then in an array.
+	- Allow multiple enum values to be passed into the same argument, packing
+	  then in an array ;
+	- Merge a custom method to every application class, `activate', that sends
+	  the 'misc/actv' event.
 
 2007-03-18  Laurent Sansonetti  <lsansonetti@apple.com>
 
